--- a/buckaroo.toml
+++ b/buckaroo.toml
@@ -35,3 +35,7 @@ version = "branch=master"
 [[dependency]]
 package = "github.com/buckaroo-pm/boost-fusion"
 version = "branch=master"
+
+[[dependency]]
+package = "github.com/buckaroo-pm/boost-variant"
+version = "branch=master"
