--- a/buckaroo.toml
+++ b/buckaroo.toml
@@ -55,3 +55,7 @@ version = "branch=master"
 [[dependency]]
 package = "github.com/buckaroo-pm/boost-lexical_cast"
 version = "branch=master"
+
+[[dependency]]
+package = "github.com/buckaroo-pm/boost-iostreams"
+version = "branch=master"
