* Migrates to SKYLARK

--- a/.buckconfig
+++ b/.buckconfig
@@ -1,6 +1,17 @@
+[project]
+  ignore = .git
+
+[parser]
+  default_build_file_syntax = SKYLARK
+
 [cxx]
   cxxflags = -std=c++14
   should_remap_host_platform = true
 
-[project]
-  ignore = .git
+[cxx#macosx-x86_64]
+  cxxflags = -std=c++14
+  should_remap_host_platform = true
+
+[cxx#linux-x86_64]
+  cxxflags = -std=c++14
+  should_remap_host_platform = true
