--- a/buckaroo.lock.toml
+++ b/buckaroo.lock.toml
@@ -60,137 +60,118 @@ target = "//:utility"
 package = "github.com/buckaroo-pm/boost-variant"
 target = "//:variant"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-assert"
-version = "branch=master"
-revision = "cae7816110ba208a2290d02d128594e8809c9075"
+[lock."github.com/buckaroo-pm/boost-assert"]
+versions = [ "branch=master" ]
+revision = "fc4d65435c49b5b4fbbf0d4867ee8f69bfd42ef1"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-bind"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-bind"]
+versions = [ "branch=master" ]
 revision = "783ec0afe46d65f8cfdb558e16f25adc02797b3c"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-config"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-config"]
+versions = [ "branch=master" ]
 revision = "f2f2d0d85496b72eeff1186518deb7e23c757bfd"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-container"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-container"]
+versions = [ "branch=master" ]
 revision = "a5b5d9d020d8e06e1cd311ee14e0cbc04557d6bf"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-container_hash"
-version = "branch=master"
-revision = "9446eb516e717ae9c80bc89768a8d1160bcf6887"
+[lock."github.com/buckaroo-pm/boost-container_hash"]
+versions = [ "branch=master" ]
+revision = "ddd9a887f1f0253ded4455d455b3c54228067b74"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-core"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-core"]
+versions = [ "branch=master" ]
 revision = "10b589cb4aea4ca823237059f104cbfdd09b0f0e"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-detail"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-detail"]
+versions = [ "branch=master" ]
 revision = "94aa5268c1a74468be94b40afd730aea1730ceab"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-foreach"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-exception"]
+versions = [ "branch=master" ]
+revision = "1795a6e9756f4d9ac60d43e2b9b07ec7ddfdbfb7"
+
+[lock."github.com/buckaroo-pm/boost-foreach"]
+versions = [ "branch=master" ]
 revision = "fdd7884007f803bb661bfcf482f39306d1a45175"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-function_types"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-function_types"]
+versions = [ "branch=master" ]
 revision = "2e4e19d69f254bad79bc3344c8fb9f77ef547d6c"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-fusion"
-version = "branch=master"
-revision = "9055cd4020d2b0cac83f120efd3396600079d510"
+[lock."github.com/buckaroo-pm/boost-fusion"]
+versions = [ "branch=master" ]
+revision = "06c6c09682a6f739c299b745613d5e20c0609e01"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-integer"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-integer"]
+versions = [ "branch=master" ]
 revision = "5badcf5b232a15e89d0701bef687ffbe70398696"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-intrusive"
-version = "branch=master"
-revision = "76db8f26605af972f09576a4748e41da6a9d0fc5"
+[lock."github.com/buckaroo-pm/boost-intrusive"]
+versions = [ "branch=master" ]
+revision = "5d18cdbcb05444b888687b0546112bef2e4d13c6"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-iostreams"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-iostreams"]
+versions = [ "branch=master" ]
 revision = "3ec08e98ee8d95195b03c59f309249f8b7998203"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-lexical_cast"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-lexical_cast"]
+versions = [ "branch=master" ]
 revision = "754897430f0e00c2c39d378159ca537e52e2b05d"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-math"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-math"]
+versions = [ "branch=master" ]
 revision = "a0bb53554f114166781f010a487aa307f66a17ff"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-mpl"
-version = "branch=master"
-revision = "4c91f620f270414ceb5c3dbf3419a4f6ffe38c1e"
+[lock."github.com/buckaroo-pm/boost-move"]
+versions = [ "branch=master" ]
+revision = "3f0711cabd643ed902ff3ae3d6746ba2f7256e4e"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-phoenix"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-mpl"]
+versions = [ "branch=master" ]
+revision = "6493fcda0f5cd2ee595346ca48ff495db9fa74d5"
+
+[lock."github.com/buckaroo-pm/boost-phoenix"]
+versions = [ "branch=master" ]
 revision = "bd1f844eae9a8b52a626f62db4d89031428da32a"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-preprocessor"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-preprocessor"]
+versions = [ "branch=master" ]
 revision = "a70772bbd315eb597c3f1e359af742dde46a6f37"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-proto"
-version = "branch=master"
-revision = "b2583e4e973b3d86553016a10b6c096f451a5410"
-
-[[lock]]
-name = "github.com/buckaroo-pm/boost-static_assert"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-static_assert"]
+versions = [ "branch=master" ]
 revision = "4b9da4628bc69ad0e9b244d3ec885f2eadac95d8"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-tti"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-throw_exception"]
+versions = [ "branch=master" ]
+revision = "788503e2365554d1860c6d2043999e3430d1f7a5"
+
+[lock."github.com/buckaroo-pm/boost-tti"]
+versions = [ "branch=master" ]
 revision = "aab9730b50c9004e3b70b7006cfb8abeefd04737"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-tuple"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-tuple"]
+versions = [ "branch=master" ]
 revision = "5f4b3f572603f796257652c6851af5a98f8a60a3"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-type_index"
-version = "branch=master"
-revision = "20fb7a55b42537123e4c0e617b94145564f05e59"
+[lock."github.com/buckaroo-pm/boost-type_index"]
+versions = [ "branch=master" ]
+revision = "a8183e0bdcaafdda1183c0279137acadcb5b4466"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-type_traits"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-type_traits"]
+versions = [ "branch=master" ]
 revision = "a34caf51f831ffb77d1057c668b5db620863d191"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-typeof"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-typeof"]
+versions = [ "branch=master" ]
 revision = "18a9fd7819c36e3ff67a744c054cf144f3ca784c"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-utility"
-version = "branch=master"
+[lock."github.com/buckaroo-pm/boost-utility"]
+versions = [ "branch=master" ]
 revision = "57aa216434800315c9cd2664169e444e3070a677"
 
-[[lock]]
-name = "github.com/buckaroo-pm/boost-variant"
-version = "branch=master"
-revision = "95e8018e82dc4522530d1aed1b5f43023f531511"
+[lock."github.com/buckaroo-pm/boost-variant"]
+versions = [ "branch=master" ]
+revision = "f95029191ed33a6370b690da81df903dc7db4cb1"
